<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.blueriver.ordering</groupId>
	<artifactId>SpringMvcJpaApp</artifactId>
	<packaging>war</packaging>
	<version>1.0-SNAPSHOT</version>
	<name>SpringMVC Customer and Ordering Web App</name>
	<url>http://maven.apache.org</url>

	<properties>
		<jdk.version>1.8</jdk.version>
		<spring.version>4.0.6.RELEASE</spring.version>
		<spring.security.version>3.2.3.RELEASE</spring.security.version>
		<jstl.version>1.2</jstl.version>
		<javax.servlet.version>3.1.0</javax.servlet.version>
		<jackson.version>1.9.10</jackson.version>
		<heroku.app.name>springmvcjpa</heroku.app.name>
		<jee.version>7.0</jee.version>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>	
   		<timestamp>${maven.build.timestamp}</timestamp>
		<maven.build.timestamp.format>dd-MMM-yyyy</maven.build.timestamp.format>
	</properties>

	<dependencies>
		<dependency>
			<groupId>javax.servlet</groupId>
			<artifactId>javax.servlet-api</artifactId>
			<version>${javax.servlet.version}</version>
		    <scope>provided</scope>
		</dependency>
		
		<!-- JEE Servlet container version. This resolves references such as ${pageContext.request.contextPath} in JSP files -->
		<dependency>  
		    <groupId>javax</groupId>    
		    <artifactId>javaee-web-api</artifactId>    
		    <version>${jee.version}</version> 
		    <scope>provided</scope>
		</dependency>

		<!-- Spring 3 dependencies -->
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-core</artifactId>
			<version>${spring.version}</version>
		</dependency>

		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-web</artifactId>
			<version>${spring.version}</version>
		</dependency>

		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-webmvc</artifactId>
			<version>${spring.version}</version>
		</dependency>

		<!-- Spring Security -->
		<dependency>
			<groupId>org.springframework.security</groupId>
			<artifactId>spring-security-web</artifactId>
			<version>${spring.security.version}</version>
		</dependency>

		<dependency>
			<groupId>org.springframework.security</groupId>
			<artifactId>spring-security-config</artifactId>
			<version>${spring.security.version}</version>
		</dependency>

        <!-- JSTL 1.2 dependency -->
		<dependency>
			<groupId>jstl</groupId>
			<artifactId>jstl</artifactId>
			<version>${jstl.version}</version>
		</dependency>
		
        <!-- EclipseLink dependency -->
		<dependency>
			<groupId>org.eclipse.persistence</groupId>
			<artifactId>eclipselink</artifactId>
			<version>2.5.2</version>
		</dependency>
		
        <!-- PostGreSQL dependency -->
		<dependency>
			<groupId>org.postgresql</groupId>
			<artifactId>postgresql</artifactId>
  			<version>9.4.1208.jre7</version> 
<!--  			<version>9.4.1207</version> -->
		</dependency>
		
		<!-- Log4J -->
		<dependency>
		    <groupId>log4j</groupId>
		    <artifactId>log4j</artifactId>
		    <version>1.2.17</version>
		</dependency> 		
		    
		<!-- Jackson -->
		<dependency>
			<groupId>org.codehaus.jackson</groupId>
			<artifactId>jackson-mapper-asl</artifactId>
			<version>${jackson.version}</version>
		</dependency>
		
        <!-- Apache Commons Upload --> 
		<dependency>
			<groupId>commons-fileupload</groupId>
			<artifactId>commons-fileupload</artifactId>
			<version>1.2.2</version>
		</dependency>
	 
		<!-- Apache Commons Upload --> 
		<dependency>
			<groupId>commons-io</groupId>
			<artifactId>commons-io</artifactId>
			<version>1.3.2</version>
		</dependency>
 
		<dependency>
			<groupId>commons-codec</groupId>
			<artifactId>commons-codec</artifactId>
			<version>1.4</version>
		</dependency>
 
	</dependencies>

	<build>
		<finalName>SpringMvcJpaApp</finalName>
		
		<!-- this is needed for Maven to write to the version.txt file -->
		<resources>
		   <resource>
		      <directory>src/main/resources</directory>
		      <filtering>true</filtering>
		   </resource>
		</resources>
		
		<plugins>
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>2.3.2</version>
				<configuration>
					<source>${jdk.version}</source>
					<target>${jdk.version}</target>
				</configuration>
			</plugin>
			
            <plugin>
              <groupId>com.heroku.sdk</groupId>
              <artifactId>heroku-maven-plugin</artifactId>
              <version>0.5.7</version>
              <configuration>
                <appName>${heroku.app.name}</appName>
                <argLine>${argLine} -Xmx512m -XX:MaxPermSize=256m</argLine>
              </configuration>
            </plugin>
<!--              
                <plugin>
                    <artifactId>maven-antrun-plugin</artifactId>
                    <executions>
                        <execution>
                            <id>Copying file to destination folder</id>
                            <phase>package</phase>
                            <goals>
                                <goal>run</goal>
                            </goals>
                            <configuration>
                                <tasks>
                                    <copy
                                        file="src/main/resources/META-INF/db.properties"
                                        overwrite="true" todir="${project.build.directory}/META-INF" />
                                </tasks>
                            </configuration>
                        </execution>
                    </executions>
                </plugin>
-->                            
<!--  			
            <plugin>
                <artifactId>maven-war-plugin</artifactId>
                <version>2.3</version>
            </plugin>
			
			<plugin>
			    <groupId>org.apache.maven.plugins</groupId>
			    <artifactId>maven-dependency-plugin</artifactId>
			    <version>2.3</version>
			    <executions>
			        <execution>
			            <phase>package</phase>
			            <goals><goal>copy</goal></goals>
			            <configuration>
			                <artifactItems>
			                    <artifactItem>
			                        <groupId>org.mortbay.jetty</groupId>
			                        <artifactId>jetty-runner</artifactId>
			                        <version>7.4.5.v20110725</version>
			                        <destFileName>jetty-runner.jar</destFileName>
			                    </artifactItem>
			                </artifactItems>
			            </configuration>
			        </execution>
			    </executions>
			</plugin>
-->			
		</plugins>
	</build>

</project>